# flascard

./: .env  Cargo.toml  Makefile  README.md  diesel.toml  rust-toolchain.toml  temp.json
data/: jwt_blacklist.json
docker/: docker-compose.yaml
migration/src/: lib.rs  m20250223_061404_create_users_table.rs  m20250223_064318_create_sets_table.rs  m20250223_065024_create_questions_table.rs  m20250223_065613_create_answers_table.rs  m20250223_070735_create_quizes_table.rs  m20250223_071935_create_quiz_questions_table.rs  m20250223_072007_create_quiz_question_anwsers_table.rs  m20250223_072118_create_shared_quizes_table.rs  m20250223_072123_create_shared_sets_table.rs  m20250223_075910_create_tests_table.rs  m20250223_075918_create_test_states_table.rs  m20250223_075930_create_test_answers_table.rs  m20250223_075930_create_test_results_table.rs  m20250404_031734_create_test_question_results_table.rs
migrations/: m20250223_061404_create_users_table.php
postman/: flashcard.postman_collection.json
src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  server.rs  static.rs
src/controllers/: auth_controller.rs  mod.rs  qna.rs  qna_controller.rs  quiz.rs  quiz_controller.rs  quiz_question.rs  quiz_question_controller.rs  set.rs  set_controller.rs  share_quiz.rs  test.rs  test_controller.rs  user.rs  user_controller.rs
src/db/: db.rs  db_connection.rs
src/entities/: answers.rs  mod.rs  prelude.rs  questions.rs  quiz_question_answers.rs  quiz_questions.rs  quizes.rs  sea_orm_active_enums.rs  sets.rs  shared_quizes.rs  shared_sets.rs  test_answers.rs  test_question_results.rs  test_results.rs  test_states.rs  tests.rs  users.rs
src/enums/: error.rs  generic.rs  mod.rs
src/handlers/: mod.rs  qna.rs  quiz.rs  quiz_question.rs  set.rs  test.rs  user.rs
src/middleware/: jwt.rs
src/models/: mod.rs  qna.rs  quiz.rs  quiz_question.rs  set.rs  test.rs  user.rs
src/repositories/: mod.rs  question.rs  quiz.rs  quiz_question.rs  set.rs  test.rs  user.rs
src/routes/: auth_route.rs  mod.rs  qna.rs  qna_route.rs  quiz.rs  quiz_question_route.rs  quiz_route.rs  set.rs  test_route.rs  user.rs  user_route.rs
src/services/: mod.rs  prelude.rs  question.rs  quiz.rs  quiz_question.rs  set.rs  shared_quiz.rs  shared_set.rs  test.rs  user.rs
src/services/implements/: mod.rs  prelude.rs  qna_impl.rs  quiz_impl.rs  quiz_question_impl.rs  (+3 more)
src/utils/: enum_to_string.rs  helpers.rs  jwt.rs  mod.rs  validator.rs
(+8 files in other folders)
