[package]
name = "flashcard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
axum = { version = "0.8.1", features = ["macros"] }
sea-orm = { version = "1.1.6", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
anyhow = "1.0.96"
thiserror = "2.0.11"
