[package]
name = "flashcard"
version = "0.1.0"
edition = "2021"

[dependencies]
# web services
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
axum = { version = "0.8.1", features = ["macros"] }
sea-orm = { version = "1.1.6", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

# error handling
anyhow = "1.0.96"
thiserror = "2.0.11"

# logger
chrono = "0.4.40"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "env-filter",
    "time",
    "json",
] }
tracing-appender = "0.2.3"

# utils
uuid = { version = "1.15.1", features = ["v4"] }
