[package]
name = "flashcard"
version = "0.1.0"
edition = "2021"

[dependencies]
# web services
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
axum = { version = "0.8.1", features = ["macros"] }
sea-orm = { version = "1.1.6", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

# error handling
anyhow = "1.0.96"
thiserror = "2.0.11"

# logger
chrono = "0.4.40"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "env-filter",
    "time",
    "json",
] }
tracing-appender = "0.2.3"

# utils
uuid = { version = "1.15.1", features = ["v4"] }
bcrypt = "0.17.0"
once_cell = "1.20.3"
parking_lot = "0.12.3"
dotenv = "0.15.0"
toml = "0.8.20"
clap = { version = "4.5.31", features = ["derive"] }

# middlewares
jsonwebtoken = "9.3.1"


# macro
quote = "1.0.37" # For generating Rust code
syn = { version = "2.0.91", features = [
    "full",
    "fold",
] } # For parsing Rust code
# proc-macro2 = "1.0.92" # Required by `quote` and `syn`

[lib]
proc-macro = true
